<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/remove"
        android:icon="@android:drawable/ic_menu_delete"
        android:title="@string/remove" />
    <item android:id="@+id/info"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/info" />
    <item android:id="@+id/move"
        android:icon="@android:drawable/ic_menu_set_as"
        android:title="@string/move" />
    <item android:id="@+id/uninstall"
            android:icon="@android:drawable/ic_menu_set_as"
            android:title="@string/uninstall" />
    <item android:id="@+id/settings"
        android:icon="@android:drawable/ic_menu_set_as"
        android:title="@string/launcher_settings" />
</menu>